# project-root

./: .gitignore  README.md
backend/: Cargo.toml  config.yml
backend/src/: config.rs  flat_index.rs  handler.rs  main.rs  model.rs  presenter.rs  utils.rs
backend/src/data/: reviews.index  reviews.json  reviews.jsonl
frontend/: Cargo.toml  index.html
frontend/src/: main.rs
frontend/src/page/: app.rs  mod.rs  semantic_create.rs  semantic_search.rs
