[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_router = "0.7"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"

web-sys = { version = "0.3", features = ["File", "FileList", "HtmlInputElement"] }

# ✅ เพิ่ม
gloo-net = "0.6"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
